
(menhir
 (modules parser))

(ocamllex lexer)

(library
 (name mylib)
 (libraries core batteries
 	    ppx_deriving ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)
 (modules ast parser lexer simulator)
 (preprocess (pps ppx_deriving.ord ppx_deriving.eq ppx_deriving.show)))

; (executable
;  (name main)
;  (libraries core)
;  (modules main ast parser lexer))
